--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             z-index: 10;
         }
         #logs {
-            display: none;
+            /* display: none; */
             position: fixed;
             top: 10px;
             right: 10px;
